Minor spelling mistakes and appendix revision

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -10,6 +10,8 @@
 \usepackage{float} % here for H placement parameter
 \usepackage{hyperref}
 \usepackage[letterpaper, portrait, margin=1in]{geometry}
+\usepackage{helvet}
+\renewcommand{\familydefault}{\sfdefault}
 
 \definecolor{LightCyan}{rgb}{0.88,1,1}
 \hypersetup{
@@ -45,7 +47,6 @@
 		\textbf{Date} & \textbf{Developer(s)} & \textbf{Change}        \\
 		\midrule
 		October 19th 2022        & Back End Developers              & Initial documentation for Hazard Analysis \\
-		...           & ...                   & ...                    \\
 		\bottomrule
 	\end{tabularx}
 \end{table}
@@ -117,7 +118,7 @@ This is where all data stored on the device can be viewed/ analyzed by the resea
 \subsection{System Boundary Diagram}
 \begin{figure}[H]
 	\begin{center}
-		\includegraphics[width=0.90\textwidth]{SystemBoundaryDiagram}
+		\includegraphics[width=0.80\textwidth]{SystemBoundaryDiagram}
 		\caption{System Boundary Diagram}
 		\label{Fig_SBD}
 	\end{center}
@@ -769,27 +770,20 @@ Postponed requirements are not of lower priority than the requirements to be com
 
 \section*{Appendix}
 \subsection*{Therac-25 case study}
-The Back End Developers would like to take a section of this document to describe the personal importance of hazard analyses (and other relevant documentation) to the team. A perfect example of this is the was the Therac-25.\\
+The Back End Developers would like to take a section of this document to describe the importance of hazard analyses (and other relevant documentation). A perfect example of this is the was the Therac-25.\\
 
-The Therac-25 was a radiotherapy machine designed by Atomic Energy Canada Limited (AECL) in 1982. It was designed to treat cancer by sending beams of high-energy particles (either electrons or x-rays) through a patient's tumour, thereby killing it. This machine was one of the first of its kind to be computer controlled; using software to direct its functions rather than interdependent physical mechanisms. \cite{leveson-1999} Considered state-of-the-art at the time, the Therac-25 promised to revolutionize radiotherapy.\\
+The Therac-25 was a radiotherapy machine designed by Atomic Energy Canada Limited (AECL) in 1982. It was designed to treat cancer by sending beams of high-energy particles (either electrons or x-rays) through a patient's tumor, thereby killing it. This machine was one of the first of its kind to be computer controlled; using software to direct its functions rather than interdependent physical mechanisms. \cite{leveson-1999} Considered state-of-the-art at the time, the Therac-25 promised to revolutionize radiotherapy.\\
 
-However, there were problems. Operators of the machine would find that they encountered many error messages from the computer console, of which none were explained by AECL. These errors were non-descript, and often simple read 'MALFUNCTION' followed by a number. The same operators stated that they had grown used to these messages, and often ignored them and proceeded with treatments.\\
-
-In addition, none really knew how the Therac-25 was programmed. The original developer had developed the software for the previous Therac-6 and Therac-20 models of radiotherapy machines, and had since left the company. AECL had directly ported the software into the Therac-25, and did not test the combination of the software and the new hardware properly.\\
+However, there were problems. Operators of the machine would find that they encountered many error messages from the computer console, of which none were explained by AECL. These errors were non-descript, and often simple read 'MALFUNCTION' followed by a number. The same operators stated that they had grown used to these messages, and often ignored them and proceeded with treatments. Also, none really knew how the Therac-25 was programmed. The original developer had developed the software for the previous Therac-6 and Therac-20 models of radiotherapy machines, and had since left the company. AECL had directly ported the software into the Therac-25, and did not test the combination of the software and the new hardware properly.\\
 
 Cancer patients treated using the Therac-25 began to report issues. They entered the machine thinking that the procedures would be painless (which is usually true for radiotherapy). However, they often felt powerful shocks and intense burning sensations around the areas that the Therac-25 would administer radiation. Later on, these same patients would fall heavily sick with symptoms identical to those with acute radiation poisoning. Some patients had to have entire limbs removed due to intense radiation damage, and none knew why. The AECL assured the operators that the machine was incapable of administering deadly doses of radiation, and attested to its safety.\cite{leveson-turner-1993} In reality, the machine was exposing patients to doses of radiation hundreds of times greater than what was prescribed.\cite{baase-henry-2019} Between 1985 and 1987, three people died of radiation exposure due to the Therac-25, and two others sustained lifelong injuries.\\
 
-A later investigation revealed that when operators changed from the electron mode of the machine to the x-ray mode in a certain way, the Therac-25 would fail to move a dampening shield between the fully powered x-ray and the patient. This dampening shield served to lower intensity of the x-ray beam to safe levels. The software would correctly detect an error, but simply displayed a window with the text 'MALFUNCTION 54'. Having grown used to these messages, the operators would proceed with treatment without the shield in place. In addition, a flag variable which would instruct the machine to perform safety checks was designed to be set by incrementation rather than being set to a fixed value. This flag would often overflow from its maximum value of 255 to zero, which instructed the machine to bypass safety checks. A later review would reveal that the Therac-25 had eleven separate critical engineering and institutional failures which would have put a patient's life in danger. The combination of these factors caused the Therac-25 to give unlucky patients massive radiation overdoses.\\
+A later investigation revealed that when operators changed from the electron mode of the machine to the x-ray mode in a certain way, the Therac-25 would fail to move a dampening shield between the fully powered x-ray and the patient. This dampening shield served to lower intensity of the x-ray beam to safe levels. The software would correctly detect an error, but simply displayed a window with the text 'MALFUNCTION 54'. Having grown used to these messages, the operators would proceed with treatment without the shield in place. In addition, a flag variable which would instruct the machine to perform safety checks was designed to be set by incrementation rather than being set to a fixed value. This flag would often overflow from its maximum value of 255 to zero, which instructed the machine to bypass safety checks. A later review would reveal that the Therac-25 had eleven separate critical engineering and institutional failures which would have put a patient's life in danger. The combination of these factors caused the Therac-25 to give unlucky patients massive radiation overdoses. In response to this incident, the International Electrotechnical Commission (IEC) released standard IEC 62304; a standard which details development lifecycle standards specifically for software present on medical devices. It also describes the dangers and guidance regarding Software of Unknown Pedigree (SOUP).\\
 
-In response to this incident, the International Electrotechnical Commission (IEC) released standard IEC 62304; a standard which details development lifecycle standards specifically for software present on medical devices. It also describes the dangers and guidance regarding Software of Unknown Pedigree (SOUP).\\
+The worst part is that none of this had to happen. Should a hazard analysis have been performed, the team at AECL who designed the Therac-25 would have known that unaccounted arithmetic overflows could bypass safety features. They would have known that the software written by the original Therac-6 and Therac-20 developer could not be maintained and troubleshot even for the most basic errors. They would have known that non-descript errors in a system like the Therac-25 could potentially be life-threatening. They would never have assured machine operators that overdoses were impossible. Had they done so, they would have never decided that a direct port of the Therac-20 software would have been appropriate for the system they were designing. They may have thrown out the software all together and started from scratch. This would have taken much more time and many more resources than a simple port, but that team had a responsibility to ensure that the potential hazards of the Therac-25 were accounted for and mitigated. It would have been a good decision. As they did not make it, three patients died from treatments meant to save their lives.\cite{rose_1994}\\
 
-The worst part is that \textbf{none of this had to happen.} Should a hazard analysis have been performed, the team at AECL who designed the Therac-25 would have known that unaccounted arithmetic overflows could bypass safety features. They would have known that the software written by the original Therac-6 and Therac-20 developer could not be maintained and troubleshot even for the most basic errors. They would have known that non-descript errors in a system like the Therac-25 could potentially be life-threatening. They would never have assured machine operators that overdoses were impossible. \\
+Events like these are a sobering reminder of the responsibilities that engineers have to the products they design, the users of said products, and to the world that their systems exist in. \textbf{A hazard analysis is an essential document to ensure that catastrophic failures do not occur as a result of an engineer's work.} It can act as a reminder to engineers that there is a reason to all of this procedure, and that documentation is essential because the risks are real. It is the responsibility of every engineer to ensure cases such as the Therac-25 never happen again.\\
 
-Had they done so, they would have never decided that a direct port of the Therac-20 software would have been appropriate for the system they were designing. They may have thrown out the software all together and started from scratch. This would have taken much more time and many more resources than a simple port, but that team had a responsibility to ensure that the potential hazards of the Therac-25 were accounted for and mitigated. It would have been a good decision. As they did not make it, three patients died from treatments meant to save their lives.\cite{rose_1994}\\
-
-Events like these are tragedies, and are a sobering reminder of the responsibilities that engineers have to the products they design, the users of said products, and to the world that their systems exist in. \textbf{A hazard analysis is an essential document to ensure that catastrophically horrifying failures do not occur as a result of an engineer's work.} It has saved lives before, and will continue to save lives in the future. The overconfidence, lack of respect for procedure, and immature state of established engineering standards resulted in one of the worst disasters in medical history.\\
-
-This section may seem depressing, overly-dramatic, or entirely unnecessary to some. But to the Back End Developers, the Therac-25 is an example of what can go terrifyingly wrong when engineers do not perform their due diligence. Cases like this remind the team members that they could be the next ones in a position to make safety-critical decisions in their engineering designs. This case also should remind all engineers that \textbf{there is a reason to all of this procedure.} It is common knowledge that engineers can be quite arrogant at times and dismiss documentation as frivolous and obstructionary to their 'real work' of coding and designing. However, cases like this prove the opposite. \textbf{Documentation is essential because the risks are real. The people who will use engineering systems and depend on them for their safety and very life are real.} It is the responsibility of every engineer to ensure cases such as the Therac-25 never happen again.\\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection*{Error Codes}
