1 minor typo corrected for appendix

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -770,7 +770,7 @@ Postponed requirements are not of lower priority than the requirements to be com
 
 \section*{Appendix}
 \subsection*{Therac-25 case study}
-The Back End Developers would like to take a section of this document to describe the importance of hazard analyses (and other relevant documentation). A perfect example of this is the was the Therac-25.\\
+The Back End Developers would like to take a section of this document to describe the importance of hazard analyses (and other relevant documentation). A perfect example of this is the Therac-25.\\
 
 The Therac-25 was a radiotherapy machine designed by Atomic Energy Canada Limited (AECL) in 1982. It was designed to treat cancer by sending beams of high-energy particles (either electrons or x-rays) through a patient's tumor, thereby killing it. This machine was one of the first of its kind to be computer controlled; using software to direct its functions rather than interdependent physical mechanisms. \cite{leveson-1999} Considered state-of-the-art at the time, the Therac-25 promised to revolutionize radiotherapy.\\
 
