--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -13,11 +13,12 @@
 \usepackage[round]{natbib}
 
 \input{../Comments}
+\input{../Common}
 
 \begin{document}
 
-\title{Test Report: Project Title} 
-\author{Author Name}
+\title{Verification and Validation Report: \progname} 
+\author{\authname}
 \date{\today}
 	
 \maketitle
@@ -90,7 +91,17 @@ This section will not be appropriate for every project.
 \section{Code Coverage Metrics}
 
 \bibliographystyle{plainnat}
-
 \bibliography{../../refs/References}
+
+\newpage{}
+\section*{Appendix --- Reflection}
+
+The information in this section will be used to evaluate the team members on the
+graduate attribute of Lifelong Learning.  Please answer the following questions:
+
+\begin{enumerate}
+  \item 
+  \item 
+\end{enumerate}
 
 \end{document}
