--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -236,7 +236,7 @@ How test will be performed:
 \wss{Static tests, review, inspections, and walkthroughs, will not follow the
 format for the tests given below.}
 
-\subsubsection{Area of Testing1}
+\subsubsection{Usability}
 		
 \paragraph{Title for Test}
 
@@ -244,33 +244,71 @@ format for the tests given below.}
 
 \item{test-id1\\}
 
-Type: Functional, Dynamic, Manual, Static etc.
+Type: Manual, Static
 					
-Initial State: 
+Initial State: The device is turned on and a question prompt is generated on screen.
 					
-Input/Condition: 
+Input/Condition: Users are asked to answer the questionnaire set without assistance in less than 1 minute.
 					
-Output/Result: 
+Output/Result: All users are able to answer their prompt successfully.
 					
-How test will be performed: 
+How test will be performed: A test group of people with age of 40 or older to be asked to receive a powered-on device and asked to respond to a set of 3 questions in 1 minute. These questions might relate to EMA studies but it's not a requirement that the test questions are EMA research specific.
 					
 \item{test-id2\\}
 
-Type: Functional, Dynamic, Manual, Static etc.
+Type: Manual, Static
 					
-Initial State: 
+Initial State: The device is turned on and left on idle mode.
 					
-Input: 
+Input: Users are asked to wear the device for 1 day.
 					
-Output: 
+Output: Users fill out a survey form regarding the comfort of the deivce on their body.
 					
-How test will be performed: 
+How test will be performed: At the end of the 1 day cycle, users will be asked to fill out an online form indicating how comfortable they felt the device was regards to weight, shape, stability, etc.
+
+\item{test-id3\\}
+
+Type: Manual, Static
+					
+Initial State: The device is turned on off.
+					
+Input: Users are asked to clean the device.
+					
+Output: The device is cleaned without any harm to it.
+					
+How test will be performed: A group of university students to be asked to read the manual and clean the device. All students should be able to understand the manual and clean the device succesfully without any assistance.s
 
 \end{enumerate}
 
-\subsubsection{Area of Testing2}
+\begin{enumerate}
 
-...
+\subsubsection{Performance}
+
+\item{test-id1\\}
+
+Type: 
+					
+Initial State: The device has collected a complete set of data.
+					
+Input: The device is connected to the host software and connection is established for data transfer.
+					
+Output: Data transfer to finish within the specified parameter, TRASFERTIME.
+					
+How test will be performed: 2 group members of Back End Developers to each perform data trasnfer test 3 times and record the total transfer time for each execution. All 6 tests should result in execution time less than or equal to TRANSFERTIME.
+
+\item{test-id2\\}
+
+Type: 
+					
+Initial State: The device is turned on and left on idle mode.
+					
+Input: Users wear the device for 10 days.
+					
+Output: The total amount of time before the device runs out of battery is greater or equal to the parameter, BATTERYLIFE.
+					
+How test will be performed: 2 group members of Back End Developers each wear the device for 10 days under their normal lives. At the end of each calendar day, they are asked to record their response to a simple question: "Does the device still have battery life left? If so, how much percentage?". 
+
+\end{enumerate}
 
 \subsection{Traceability Between Test Cases and Requirements}
 
